Source/WebCore/platform/MediaSample.h
@@ -59,6 +59,7 @@ public:
     virtual size_t sizeInBytes() const = 0;
     virtual FloatSize presentationSize() const = 0;
     virtual void offsetTimestampsBy(const MediaTime&) = 0;
+    virtual void setTimestamps(const MediaTime&, const MediaTime&) = 0;
 
     enum SampleFlags {
         None = 0,
